--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
                 
                 <div class="pt-8 border-t border-gray-200 text-center">
                     <p class="opacity-60 text-sm">© 2025 <span id="footer-company">Vitória Solar</span>. Todos os direitos reservados.</p>
-                    <p class="opacity-60 text-sm mt-2">CNPJ: 12.345.678/0001-90</p>
+                    <p class="opacity-60 text-sm mt-2">CNPJ: 99999999999999</p>
                 </div>
             </div>
         </footer>
@@ -1942,3 +1942,4 @@
     </script>
 </body>
 </html>
+
